[gd_scene load_steps=3 format=3 uid="uid://bk5mx4h4uccm0"]

[ext_resource type="Theme" uid="uid://c8c8on3ojfekb" path="res://core/main_theme.tres" id="1_le72s"]
[ext_resource type="Script" path="res://core/main_menu/main_menu.gd" id="2_qjrgb"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_le72s")
script = ExtResource("2_qjrgb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 100
text = "Game Title"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 48)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Name"
alignment = 1

[node name="IPAddressEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 48)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "IP Adress"
alignment = 1

[node name="CreateButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 48)
layout_mode = 2
size_flags_horizontal = 4
text = "Create game"

[node name="JoinButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 48)
layout_mode = 2
size_flags_horizontal = 4
text = "Join game"

[node name="PlayerNamesList" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/PlayerNamesList"]
layout_mode = 2
text = "Players in lobby:"
horizontal_alignment = 1

[node name="LobbyButtons" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 6

[node name="QuitButton" type="Button" parent="VBoxContainer/VBoxContainer/LobbyButtons"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(180, 42)
layout_mode = 2
text = "Quit Game"

[node name="StartButton" type="Button" parent="VBoxContainer/VBoxContainer/LobbyButtons"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(180, 42)
layout_mode = 2
text = "Start Game"

[node name="ExitLobbyButton" type="Button" parent="VBoxContainer/VBoxContainer/LobbyButtons"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(180, 42)
layout_mode = 2
text = "Exit Lobby"

[node name="Spacer" type="Control" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/VBoxContainer/CreateButton" to="." method="_on_create_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/LobbyButtons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/LobbyButtons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/LobbyButtons/ExitLobbyButton" to="." method="_on_exit_lobby_button_pressed"]
